--- a/app/src/main/res/layout/activity_dat_phong.xml
+++ b/app/src/main/res/layout/activity_dat_phong.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:background="#fff"
     tools:context="com.example.dell.datphongkhachsanonline.DatPhong">
 
     <mehdi.sakout.fancybuttons.FancyButton
@@ -71,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPersonName" />
     <TextView
         android:id="@+id/textView2"
@@ -86,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:ems="10"
+        android:gravity="center"
         android:inputType="textPersonName" />
     <LinearLayout
         android:layout_width="match_parent"
