--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,7 +17,7 @@
 
       <LinearLayout
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
+          android:layout_height="match_parent"
           android:orientation="vertical" >
 
          <RelativeLayout
@@ -69,44 +70,92 @@
                 android:layout_centerVertical="true"/>
          </RelativeLayout>
 
-         <LinearLayout
+         <RelativeLayout
              android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:gravity="center"
-             android:weightSum="10">
+             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#3F51B5"
-                android:layout_weight="3"/>
-            <TextView
+                android:layout_height="3dp"
+                android:background="@color/colorPrimary"
+                android:layout_centerVertical="true"/>
+
+            <mehdi.sakout.fancybuttons.FancyButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tất cả"
-                android:layout_gravity="center"
-                android:textSize="15dp"
-                android:textColor="#fff"
-                android:background="@drawable/textviewdefault"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#3F51B5"
-                android:layout_weight="3"/>
-         </LinearLayout>
+                android:id="@+id/btnClickThucDon"
+                android:layout_centerHorizontal="true"
+                fancy:fb_text="Thực đơn"
+                fancy:fb_defaultColor="@color/colorPrimary"
+                fancy:fb_focusColor="#757575"
+                fancy:fb_textSize="15dp"
+                fancy:fb_radius="50dp">
+            </mehdi.sakout.fancybuttons.FancyButton>
+            <mehdi.sakout.fancybuttons.FancyButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnClickPhong"
+                android:layout_centerHorizontal="true"
+                fancy:fb_text="Phòng"
+                fancy:fb_defaultColor="@color/colorPrimary"
+                fancy:fb_focusColor="#757575"
+                fancy:fb_textSize="15dp"
+                fancy:fb_radius="50dp">
+            </mehdi.sakout.fancybuttons.FancyButton>
+            <mehdi.sakout.fancybuttons.FancyButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnClickTatCa"
+                android:layout_centerHorizontal="true"
+                fancy:fb_text="Tất cả"
+                fancy:fb_defaultColor="@color/colorPrimary"
+                fancy:fb_focusColor="#757575"
+                fancy:fb_textSize="15dp"
+                fancy:fb_radius="50dp">
+            </mehdi.sakout.fancybuttons.FancyButton>
+
+         </RelativeLayout>
 
          <GridView
              android:id="@+id/gvTangTret"
              android:layout_width="match_parent"
              android:layout_height="600dp"
              android:layout_marginTop="10dp"
-             android:gravity="center"
-             android:horizontalSpacing="2dp"
              android:numColumns="4"
-             android:verticalSpacing="3dp" />
+             android:verticalSpacing="10dp"
+             android:horizontalSpacing="10dp"/>
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:id="@+id/txtVien"
+                android:layout_centerVertical="true"
+                android:background="@color/colorPrimary"/>
+
+            <TextView
+                android:id="@+id/txtPanelThucDon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/textviewdefault"
+                android:padding="10dp"
+                android:text="Thực đơn"
+                android:textColor="#fff"
+                android:textSize="15dp"
+                android:layout_centerHorizontal="true"/>
+         </RelativeLayout>
+
+         <GridView
+             android:id="@+id/gvThucDon"
+             android:layout_width="match_parent"
+             android:layout_height="2000dp"
+             android:layout_marginTop="10dp"
+             android:gravity="center"
+             android:horizontalSpacing="10dp"
+             android:numColumns="3"
+             android:verticalSpacing="10dp" />
       </LinearLayout>
    </ScrollView>
 </LinearLayout>
