--- a/app/src/main/res/drawable/edtbasic.xml
+++ b/app/src/main/res/drawable/edtbasic.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
         android:radius="20dp"></corners>
-    <stroke android:color="@color/colorAccent"
+    <stroke android:color="#fff"
             android:width="2dp"
             ></stroke>
 </shape>
