--- a/app/src/main/res/layout/dialog_datphong.xml
+++ b/app/src/main/res/layout/dialog_datphong.xml
@@ -22,11 +22,12 @@
         android:id="@+id/txtDialogLoaiPhong"
         android:text="Loại phòng"
         android:textColor="#fff"
-        android:textSize="20dp" />
+        android:textSize="15dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtDialogGia"
+        android:padding="2dp"
         android:text="Giá"
         android:textColor="#fff"
         android:textSize="20dp"
@@ -37,55 +38,61 @@
         android:id="@+id/txtDialogGiaDem"
         android:text="Giá đêm"
         android:textColor="#fff"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textSize="15dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtDialogGiaNgay"
+        android:padding="5dp"
         android:text="Giá ngày"
         android:textColor="#fff"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textSize="15dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtDialogTrangThai"
         android:text="Trạng thái"
-        android:textColor="#D50000"
-        android:textSize="20dp"
+        android:textColor="#F48FB1"
+        android:textSize="18dp"
         android:textStyle="bold"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_margin="10dp"
         android:gravity="center"
+        android:weightSum="10"
         android:orientation="horizontal">
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/btnHuyDialogDatPhong"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            fancy:fb_text="Hủy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="5"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_gravity="center_horizontal"
+            fancy:fb_text="Trở lại"
             fancy:fb_defaultColor="#00897B"
             fancy:fb_focusColor="#757575"
             fancy:fb_textSize="20dp"
-            fancy:fb_borderWidth="2dp"
-            fancy:fb_radius="35dp">
+            fancy:fb_radius="30dp">
         </mehdi.sakout.fancybuttons.FancyButton>
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/btnDialogDatPhong"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="150dp"
-            fancy:fb_text="Đặt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="5"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_gravity="center_horizontal"
+            fancy:fb_text="Đặt phòng"
             fancy:fb_defaultColor="#E65100"
             fancy:fb_focusColor="#757575"
             fancy:fb_textSize="20dp"
-            fancy:fb_borderWidth="2dp"
-            fancy:fb_radius="35dp">
+            fancy:fb_radius="30dp">
         </mehdi.sakout.fancybuttons.FancyButton>
     </LinearLayout>
 </LinearLayout>
